# AniFeatures

./: .gitignore  README.md  auto_domain_tagger.py  create_dataset.py  csv_verify.py  data_preprocessor.py  eval.py  generate_smart_pairs.py  model.py  nn.py  pyproject.toml  rank_images.py  requirements.txt  tags.py  train.py  utils.py
DanbooruDownloader-master/DanbooruDownloader/: DanbooruDownloader.csproj
DanbooruDownloader-master/DanbooruDownloader/Commands/: DumpCommand.cs
DanbooruDownloader-master/DanbooruDownloader/Utilities/: DanbooruUtility.cs  SQLiteUtility.cs
dataset/: tags.txt  tags_to_drop.txt
duplicates_tools/: dir_to_dir.py  dirdir_file_clash.py  duplicates_finder.py  duplicates_reviewer.py  hash_manager.py  one_to_one.py
